fix get all projects endpoint
